--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,6 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+OPENWEATHER_API_KEY="653b2fb992e6cfe8a01f9e59c9159ec4"
+GEOCODE_API_KEY="AIzaSyCTucjlLgCLRMZSJTrQTIeK9qI_Raf-Xfs"
+PLACE_API_KEY="AIzaSyC8jZhIA3OqjV0F2ygU8ODqjjicKSbIenc"
